--- a/JavaScript/Movement/缓冲运动/index.css
+++ b/JavaScript/Movement/缓冲运动/index.css
@@ -4,7 +4,7 @@
     background-color: cornflowerblue;
     position: absolute;
     top: 50px;
-    left: 700px;
+    left: 900px;
 }
 #targetLine{
     height: 200px;
@@ -12,5 +12,5 @@
     background-color: black;
     position: absolute;
     left:500px;
-    top:5px
+    top:0
 }
