--- a/JavaScript/Movement/多物体运动/index.css
+++ b/JavaScript/Movement/多物体运动/index.css
@@ -4,6 +4,7 @@
     height: 50px;
     position: absolute;
     top: 40;
+    border: 3px solid black
 }
 
 #div2{
@@ -12,6 +13,7 @@
     height: 50px;
     position: absolute;
     top: 110px;
+    border: 3px solid black
 }
 
 #div3{
