--- a/JavaScript/Movement/多物体运动/index.css
+++ b/JavaScript/Movement/多物体运动/index.css
@@ -1,25 +1,45 @@
-#div1{
-    background: cornflowerblue;
-    width: 100px;
-    height: 50px;
-    position: absolute;
-    top: 40;
-    border: 3px solid black
+#width {
+  background: cornflowerblue;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 40;
+  border: 3px solid black;
+  text-align: center;
+  line-height: 50px;
 }
 
-#div2{
-    background: cornflowerblue;
-    width: 100px;
-    height: 50px;
-    position: absolute;
-    top: 110px;
-    border: 3px solid black
+#opacity {
+  background: cornflowerblue;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 110px;
+  border: 3px solid black;
+  text-align: center;
+  line-height: 50px;
+  opacity: 0.3;
+  filter: alpha("opacity" =30);
 }
 
-#div3{
-    background: cornflowerblue;
-    width: 100px;
-    height: 50px;
-    position: absolute;
-    top: 180px;
+#height {
+  background: cornflowerblue;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 180px;
+  border: 3px solid black;
+  line-height: 50px;
+  text-align: center;
+}
+
+#left {
+  background: cornflowerblue;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 250px;
+  border: 3px solid black;
+  line-height: 50px;
+  text-align: center;
 }
